2008-02-22  Michiel Roos	<michiel@netcreators.com>

	* Added Changelog ;-)
	* Removed version_compare() from insertPageIncache()
	* Rename modfunc1 to infomodule